# xrp-adaptive-shock-predictor

./: .gitignore  EXPAND_XASP_HISTORY_5Y.bat  README.md  START_XASP.bat  TODO.md  app.js  discovery.js  governance.js  index.html  lab.css  lab.html  lab.js  pyproject.toml  styles.css
ci/: empirical-discovery-1.6.0-r2.txt  empirical-discovery-1.6.0-r3.txt  empirical-discovery-1.6.0.txt  reopen-empirical-discovery.txt
docs/: CI_FINAL_1_3_0.md  CI_FINAL_1_3_0_V2.md  CI_FINAL_1_3_0_V3.md  CI_FINAL_1_3_0_V4.md  CI_MYPY_ARTIFACT_TRIGGER.md  CI_SOURCE_BUNDLE_TRIGGER.md  CI_SOURCE_BUNDLE_TRIGGER_V2.md  CI_VERIFY_1_3_0.md  COMPLETION_MATRIX.md  DATA_CONTRACTS.md  DATA_INTEGRITY.md  EXECUTION_PLAN.md  FIRST_TOUCH_GATE_CORRECTION_2026-07-23.md  FULL_VERIFY_1_3_0.md  GOVERNANCE.md  IMPLEMENTATION_BACKLOG.md  INCREMENTAL_DATASET_PLAN.md  LINT_REMAINING.txt  LOCAL_VERIFICATION_2026-07-23.md  MAIN_MYPY_TRIGGER.md  MASTER_PLAN.md  MODEL_GOVERNANCE.md  MYPY_ARTIFACT_TRIGGER.md  MYPY_FINAL_TRIGGER.md  MYPY_ONLY_TRIGGER.md  MYPY_PR8_TRIGGER.md  MYPY_TRIGGER.md  MYPY_TRIGGER_2.md  PREDICTION_CADENCE.md  PROJECT_STATUS.md  REFACTOR_AUDIT_2026-07-23.md  REFACTOR_PROGRESS_2026-07-23.md  RUN_REAL_PLATFORM.md  partitioned-derived-stores.patch  platform-governance.patch  xasp-fixes-2.patch  xasp-fixes.patch
reports/: PHASE_1_4_PROGRESS.md
scripts/: apply_partitioned_integration.py  compute_bootstrap_ms.py  optimize_partitioned_stores.py
tests/: test_anchor_dataset.py  test_baseline.py  test_cadence.py  test_checkpointed_bootstrap.py  test_data_integrity.py  test_data_quality.py  test_dataset_state.py  test_drift.py  test_envelope_target_store.py  test_extended_horizons.py  test_fast_anchor_concat.py  test_fast_bootstrap_builders.py  test_features.py  test_file_lock.py  test_first_passage_discovery.py  test_future_envelope.py  test_governance_routes.py  test_history_expansion.py  test_labeling.py  test_live_normalization.py  test_model_lab.py  test_model_registry.py  test_ohlc_first_touch.py  test_orderbook_features.py  test_partitioned_anchor_builder.py  test_partitioned_horizon_store.py  (+11 more)
(+65 files in other folders)
