[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xasp"
version = "0.1.0"
description = "Governed XRP first-touch shock prediction research toolkit"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
  "pyarrow>=16,<20",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["xasp"]
