[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xasp"
version = "1.2.0"
description = "Governed dual-model XRP adaptive-shock and first-touch research platform"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
  "pyarrow>=16,<20",
  "pydantic>=2.7,<3",
  "httpx>=0.27,<1",
  "websockets>=13,<16",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "joblib>=1.4,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
xasp-backfill = "xasp.data.cli:main"
xasp-live-record = "xasp.data.live:main"
xasp-build-anchors = "xasp.anchor_cli:main"
xasp-run-pipeline = "xasp.pipeline_cli:main"
xasp-platform = "xasp.platform_api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["xasp"]
